# agentscope_cl

./: .gitignore  multilingual_e5_base“  pyproject.toml  requirements.txt
agentscope_cl.egg-info/: PKG-INFO  SOURCES.txt
configs/: config.yaml
data/contrastive/: memory_contrastive_meta.json  memory_contrastive_samples.jsonl
data/kb/: docs.jsonl
data/memory/: memory_bank.jsonl
data/tasks/: contrastive_task_labels.jsonl
scripts/: analyze_benchmark_run.py  check_processed_tasks.py  prepare_hotpotqa.py  prepare_longmemeval.py  prepare_musique.py  probe_musique_sample.py  run_benchmark_ablation.py  serve_qwen_local.sh
sql/: init_table.sql
src/: app.py
src/agents/: __init__.py  main_agent.py
src/eval/: analyze_failures.py  compare_settings.py  run_ablation.py  summarize_results.py  summarize_results_v2.py  support_graph.py  write_manifest.py
src/llm/: client.py  providers.py
src/memory/: __init__.py  base_memory.py  embedder.py  keyword_memory.py  memory_record.py  quality_gate.py  retrieval_utils.py  vector_memory.py
src/pipeline/: run_task.py
src/policy/: analyze_decision_log.py  bandit_model.py  base_policy.py  offline_update.py  reward.py  rl_policy.py  rule_policy.py
src/reranker/: contrastive_reranker.py
src/runtime/: history_guard.py  task_context.py
src/storage/: buffered_jsonl_logger.py  jsonl_logger.py  mysql_logger.py  null_logger.py
src/tools/: migrate_memory_bank.py  retrieval_tool.py  sync_tasks_from_labels.py
src/training/: build_contrastive_dataset.py  contrastive_infer.py  (+1 more)
test/: test_local_llm.py
(+25 files in other folders)
